--- a/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
+++ b/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
@@ -91,13 +91,13 @@
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jButton12" min="-2" pref="124" max="-2" attributes="0"/>
-                              <Component id="jButton13" min="-2" pref="124" max="-2" attributes="0"/>
+                              <Component id="jb_CrearCampo" min="-2" pref="124" max="-2" attributes="0"/>
+                              <Component id="jb_ModificarCampos" min="-2" pref="124" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jButton14" min="-2" pref="124" max="-2" attributes="0"/>
-                              <Component id="jButton11" min="-2" pref="124" max="-2" attributes="0"/>
+                              <Component id="jb_ListarCampos" min="-2" pref="124" max="-2" attributes="0"/>
+                              <Component id="jb_BorrarCampos" min="-2" pref="124" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -116,13 +116,13 @@
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButton14" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
-                      <Component id="jButton12" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="jb_ListarCampos" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="jb_CrearCampo" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jButton13" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
-                      <Component id="jButton11" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="jb_ModificarCampos" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="jb_BorrarCampos" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="64" max="32767" attributes="0"/>
               </Group>
@@ -130,7 +130,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="jButton11">
+        <Component class="javax.swing.JButton" name="jb_BorrarCampos">
           <Properties>
             <Property name="text" type="java.lang.String" value="Borrar Campos"/>
           </Properties>
@@ -143,17 +143,17 @@
             <Property name="text" type="java.lang.String" value="Campos"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton12">
+        <Component class="javax.swing.JButton" name="jb_CrearCampo">
           <Properties>
             <Property name="text" type="java.lang.String" value="Crear Campos"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton13">
+        <Component class="javax.swing.JButton" name="jb_ModificarCampos">
           <Properties>
             <Property name="text" type="java.lang.String" value="Modificar Campos"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton14">
+        <Component class="javax.swing.JButton" name="jb_ListarCampos">
           <Properties>
             <Property name="text" type="java.lang.String" value="Listar Campos"/>
           </Properties>
