--- a/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
+++ b/EDD2_Proyecto_/src/edd2_proyecto_/Ventana_Principal.form
@@ -104,6 +104,10 @@
                           <EmptySpace min="-2" pref="133" max="-2" attributes="0"/>
                           <Component id="jLabel3" min="-2" pref="134" max="-2" attributes="0"/>
                       </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
+                          <Component id="jb_SalirdeCampos" min="-2" pref="67" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace pref="48" max="32767" attributes="0"/>
               </Group>
@@ -124,7 +128,9 @@
                       <Component id="jb_ModificarCampos" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
                       <Component id="jb_BorrarCampos" alignment="3" min="-2" pref="59" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="64" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="jb_SalirdeCampos" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="30" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -161,6 +167,14 @@
             <Property name="text" type="java.lang.String" value="Listar Campos"/>
           </Properties>
         </Component>
+        <Component class="javax.swing.JButton" name="jb_SalirdeCampos">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Salir"/>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_SalirdeCamposMouseClicked"/>
+          </Events>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JDialog" name="jd_Registros">
@@ -169,8 +183,14 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
+                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jButton19" max="32767" attributes="0"/>
                       <Component id="jButton17" alignment="0" max="32767" attributes="0"/>
                       <Component id="jButton15" alignment="0" max="32767" attributes="0"/>
                   </Group>
@@ -178,18 +198,9 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jButton16" alignment="1" min="-2" pref="130" max="-2" attributes="0"/>
                       <Component id="jButton18" alignment="1" min="-2" pref="130" max="-2" attributes="0"/>
+                      <Component id="jb_SalirDeRegistros" alignment="1" min="-2" pref="130" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jButton19" min="-2" pref="122" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="126" max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
-                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -208,9 +219,12 @@
                       <Component id="jButton17" pref="50" max="32767" attributes="0"/>
                       <Component id="jButton18" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jButton19" min="-2" pref="50" max="-2" attributes="0"/>
-                  <EmptySpace pref="30" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jButton19" pref="50" max="32767" attributes="0"/>
+                      <Component id="jb_SalirDeRegistros" max="32767" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="37" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -248,6 +262,14 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Listar Registros"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="jb_SalirDeRegistros">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Salir"/>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jb_SalirDeRegistrosMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
